[build-system]
# Minimum requirements for the build system to execute
requires = ["setuptools>64"]
build-backend = "setuptools.build_meta"

[project]
name = "ttim"
dynamic = ["version"]
description = "Transient multi-layer AEM Model"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Mark Bakker" }]
maintainers = [
    { name = "Mark Bakker", email = "markbak@gmail.com" },
    { name = "Davíd Brakenhoff", email = "d.brakenhoff@artesia-water.nl" },
]
requires-python = ">= 3.10"
dependencies = ["numpy", "scipy", "numba", "matplotlib", "lmfit", "pandas"]

keywords = ["hydrology", "groundwater", "model", "analytic element method"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.urls]
homepage = "https://github.com/mbakker7/ttim"
repository = "https://github.com/mbakker7/ttim"
documentation = "http://mbakker7.github.io/ttim/docs/builddocs/html/index.html"

[project.optional-dependencies]
ci = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "jupyter",
    "shapely",
    "coveralls",
    "timml",
]
docs = [
    "ttim[ci]",
    "sphinx",
    "sphinx-design",
    "pydata-sphinx-theme",
    "numpydoc",
    "myst_nb",
    "sphinxcontrib-bibtex",
    "sphinx-autoapi",
]

[tool.setuptools]
packages = ["ttim"]

[tool.setuptools.dynamic]
version = { attr = "ttim.version.__version__" }

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See: https://docs.astral.sh/ruff/rules/
select = [
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "PT",  # pytest-style
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "NPY", # numpy
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D401", # First line should be in imperative mood
    "B006", # Do not use mutable data structures as default arguments
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
